<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BucketListRaleigh</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_animation">AnimationActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gmap">GMapActivity</string>
    <string name="Food">New Button</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_drink">DrinkActivity</string>
    <string name="title_activity_fun">FunActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_auth_">Bucket List Raleigh</string>
    <string name="facebook_app_id">1564390747156863</string>
    <string name="str_username">Username</string>
    <string name="str_userpass">Password</string>
    <string name="str_review">Review</string>
    <string name="check_rem">Remember Me</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="title_activity_review">ReviewActivity</string>


</resources>
