<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none|vertical"
    android:isScrollContainer="false">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:src="@drawable/ic_app" />

        <EditText
            android:id="@+id/userpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username"
            android:layout_alignRight="@+id/username"
            android:layout_below="@+id/username"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/str_userpass"
            android:inputType="textPassword"
            android:textColorHint="#94dbe4" >

        </EditText>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userpassword"
            android:layout_centerVertical="true"
            android:layout_below="@id/userpassword"
            android:layout_marginTop="20dp"
            android:text="@string/check_rem" />

        <ImageButton
            android:id="@+id/google_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignTop="@+id/facebook_btn"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/googleplus" />

        <ImageButton
            android:id="@+id/linkedin_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignRight="@+id/userpassword"
            android:layout_alignTop="@+id/google_btn"
            android:layout_marginRight="25dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/linkedin" />

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_sign_up"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageView1"
            android:layout_marginRight="20dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:hint="@string/str_username"
            android:inputType="text"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkBox1"
            android:layout_marginTop="28dp"
            android:background="@drawable/sign_up_button_selector"
            android:text="@string/sign_up_btn"
            android:layout_marginLeft="15dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_alignBaseline="@+id/btn_sign_up"
            android:layout_alignBottom="@+id/btn_sign_up"
            android:layout_alignParentRight="true"
            android:background="@drawable/sign_in_button_selector"
            android:text="@string/sign_in_btn"
            android:layout_marginRight="15dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/facebook_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignLeft="@+id/btn_sign_up"
            android:layout_below="@+id/btn_sign_up"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="38dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/facebook" />
    </RelativeLayout>
</ScrollView>